methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:2: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var color:Color
      ^FlowerPot:2: error: local variables must be initialized
  var color:Color
      ^